[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
derive_more = "0.99.17"
cookie = "0.18.0-rc.0"
serde = { version = "1.0.197", features = ["derive"] }
bcrypt = "0.15.0"
jsonwebtoken = "9"
chrono = "0.4.35"